Name:                 hslim
Version:              0.1
Build-type:           Simple
Synopsis:             Client and Server for FitNesse Slim Protocol
Description:
   
  Provides client and server for running FitNesse tests through the Slim protocol against Haskell code.
 

License:              Apache
License-file:         LICENSE
Author:               Capital Match
Maintainer:           Arnaud Bailly <arnaud@capital-match.com>
Build-Depends:        base
Cabal-version:        >= 1.20

-- need to add data files for 'ui' directory

Library
  Default-Language:   Haskell2010
  build-depends:      base >= 4
                     ,containers >= 0.5
                     ,data-default == 0.5.3
                     ,filepath == 1.3.0.2
                     ,directory == 1.2.1.0
                     ,QuickCheck ==2.7.6
                     ,fgl == 5.5.0.1
                     ,graphviz == 2999.17.0.1
                     ,random == 1.0.1.3
                     ,mtl == 2.1.3.1
                     ,parsec == 3.1.5
                     ,utf8-string == 0.3.8
                     ,bytestring == 0.10.4.0
                     ,process == 1.2.0.0
                     ,network == 2.5.0.0
                     ,text == 1.1.1.3
  hs-source-dirs:     src
  exposed-modules:    IOAutomaton
                     ,Slim
--  other-modules:     
