Name:                 hslim
Version:              0.1
Build-type:           Simple
Synopsis:             Client and Server for FitNesse Slim Protocol
Description:
   
  Provides client and server for running FitNesse tests through the Slim protocol against Haskell code.
 

License:              Apache
License-file:         LICENSE
Author:               Capital Match
Maintainer:           Arnaud Bailly <arnaud@capital-match.com>
Build-Depends:        base
Cabal-version:        >= 1.20

Library
  Default-Language:   Haskell2010
  build-depends:      base
                     ,containers
                     ,data-default
                     ,filepath
                     ,directory
                     ,QuickCheck
                     ,fgl
                     ,graphviz
                     ,random
                     ,mtl
                     ,parsec
                     ,utf8-string
                     ,bytestring
                     ,process
                     ,network
                     ,text
  hs-source-dirs:     src
  exposed-modules:    IOAutomaton
                     ,Slim
                     ,SlimAutomaton
                     ,ATM
  other-modules:     Slim.Slim
                    ,Slim.SlimClient
                    ,Slim.SlimClientIO
                    ,Slim.SlimServer
                    ,ATM.ATM
                    ,ATM.ATMGen
                    ,ATM.ATMSlim
                    ,IOAutomaton.IOAutomaton
                    ,IOAutomaton.Generator
                    ,IOAutomaton.Graph

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

Executable hslimserver
  default-language:  Haskell2010
  main-is:           hslimserver.hs
  hs-source-dirs:    slim
  ghc-options:      -threaded
  build-depends:     base
                    ,hslim

Test-Suite tests
   Default-Language:  Haskell2010
   hs-source-dirs:    test
   type:              exitcode-stdio-1.0
   main-is:           AllTests.hs
   ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
   build-depends:  base
                  , hslim
                  , wreq
                  , containers
                  , mtl
                  , random
                  , HUnit
                  , QuickCheck
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2
