Name:           HSlim
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Arnaud Bailly & Christophe Thibaut
Synopsis:       Using Haskell as executable specification to test any Slim-compliant java program
Build-Type:     Simple
Homepage:	http://www.oqube.com/projects/hslim

Executable AllTests
  Build-Depends:  haskell98, containers > 0.2, random > 1.0, base > 4, mtl >= 1.1, network > 2.2, process > 1.0, parsec > 2.1, HUnit, QuickCheck > 2.0, bytestring > 0.9, utf8-string >= 0.3.6
  Main-Is:        AllTests.hs
  Hs-Source-Dirs: .
  Ghc-Options:    -threaded

Executable HSlimServer
  Build-Depends:  haskell98, containers > 0.2, random > 1.0, base > 4, mtl >= 1.1, network > 2.2, process > 1.0, parsec > 2.1, HUnit, QuickCheck > 2.0, bytestring > 0.9, utf8-string >= 0.3.6
  Main-Is:        HSlimServer.hs
  Hs-Source-Dirs: .
  Ghc-Options:    -threaded

Library
  Build-Depends:  haskell98, containers > 0.2, random > 1.0, base > 4, mtl >= 1.1, network > 2.2, process > 1.0, parsec > 2.1, HUnit, QuickCheck > 2.0, bytestring > 0.9, utf8-string >= 0.3.6
  Exposed-Modules: Slim.Slim, Slim.SlimClient, Slim.SlimClientIO, Slim.SlimServer, IOAutomaton.IOAutomaton, IOAutomaton.Generator, Login.Login, Login.LoginGen, Login.LoginSlim
  Hs-Source-Dirs: .
  Ghc-Options:    -threaded
